--- a/style.css
+++ b/style.css
@@ -132,6 +132,11 @@ main {
   line-height: 1.4;
 }
 
+.card .title {
+  flex: 1;
+  width: 100%;
+}
+
 .card input[type='text'] {
   font-size: 20px;
   width: 100%;
@@ -180,6 +185,10 @@ main {
 .list-item .title {
   flex: 1;
   line-height: 1.4;
+}
+
+.title.placeholder-text {
+  color: var(--muted);
 }
 
 .list-item input[type='text'] {
