--- a/style.css
+++ b/style.css
@@ -148,8 +148,8 @@ main {
 .checkbox {
   position: absolute;
   left: 16px;
-  top: 16px;
-  transform: scale(1.2);
+  top: 50%;
+  transform: translateY(-50%) scale(1.2);
 }
 
 .placeholder {
